第十二章：日期和时间

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,3 +59,11 @@ Welcome to Microblog
 </div>
 {% endblock %}
 
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{% endblock %}
+
+
+
+
